--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <p style="color:#00716e;">
+                <p style="color:#00716e; page-break-inside: auto;">
                     Do you have a question or are you interested in working with us? Just fill out the form fields
-                    below.
+                    below. Or Contact on our Email.
+                    <h6>Email: WebBros@example.com</h6>
                 </p>
             </div>
         </div>
@@ -265,7 +266,7 @@
                 <h5 class="p-2">
                     Subscribe to our newsletter for latest updates about our company
                 </h5>
-                <input type="text" class="rounded-pill text-white shadow p-1 w-25" placeholder="Enter Your e-mail">
+                <input type="text" class="rounded-pill text-dark shadow p-1 w-25" placeholder="Enter Your e-mail">
                 <button type="button" class="btn btn-outline-light rounded-pill"
                     style="background-color: #00716e;">Subscribe</button>
             </div>
